--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ xz                = ["dep:xz2"]
 zstd              = ["dep:zstd"]
 gzip              = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
 deflate           = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
-blosc2            = ["dep:blosc2-rs"]
-blosc2-static     = ["blosc2", "blosc2-rs/static"]
-blosc2-shared     = ["blosc2", "blosc2-rs/shared"]
-use-system-blosc2 = ["blosc2", "blosc2-rs/use-system-blosc2"]
+blosc2            = ["dep:blosc2-rs", "blosc2-static"]
+blosc2-static     = ["dep:blosc2-rs", "blosc2-rs/static"]
+blosc2-shared     = ["dep:blosc2-rs", "blosc2-rs/shared"]
+use-system-blosc2 = ["dep:blosc2-rs", "blosc2-rs/use-system-blosc2"]
 
 [dependencies]
 libc           = { version = "0.2", optional = true }
@@ -32,7 +32,7 @@ lz4            = { version = "^1", optional = true }
 flate2         = { version = "^1", optional = true }
 libdeflater    = { version = "^1", optional = true }
 libdeflate-sys = { version = "<1.20.0", optional = true }  # TODO: requires gcc>=4.9 not available on Python's CI wheel builds
-blosc2-rs      = { version = "0.2.5+2.14.3", optional = true }
+blosc2-rs      = { version = "0.2.5+2.14.3", optional = true, default-features = false }
 zstd           = { version = "^0.13", optional = true }
 xz2            = { version = "0.1.7", features = ["static"], optional = true }
 
