--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ xz                = ["dep:xz2"]
 zstd              = ["dep:zstd"]
 gzip              = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
 deflate           = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
-blosc2            = ["dep:blosc2-rs", "blosc2-static"]
+blosc2            = ["blosc2-static"]
 blosc2-static     = ["dep:blosc2-rs", "blosc2-rs/static"]
 blosc2-shared     = ["dep:blosc2-rs", "blosc2-rs/shared"]
 use-system-blosc2 = ["dep:blosc2-rs", "blosc2-rs/use-system-blosc2"]
