--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "libcramjam"
-version     = "0.4.5"
+version     = "0.4.6"
 edition     = "2021"
 license     = "MIT"
 description = "Compression library combining a plethora of algorithms in a similar as possible API"
@@ -33,6 +33,8 @@ blosc2-static     = ["dep:blosc2-rs", "blosc2-rs/static"]
 blosc2-shared     = ["dep:blosc2-rs", "blosc2-rs/shared"]
 use-system-blosc2 = ["dep:blosc2-rs", "blosc2-rs/use-system-blosc2"]
 
+wasm32-compat     = ["blosc2-rs/deactivate-zlib-optim"]
+
 [dependencies]
 libc           = { version = "0.2", optional = true }
 snap           = { version = "^1", optional = true }
@@ -42,7 +44,7 @@ lz4            = { version = "^1", optional = true }
 flate2         = { version = "^1", optional = true }
 libdeflater    = { version = "^1", optional = true }
 libdeflate-sys = { version = "<1.20.0", optional = true }  # TODO: requires gcc>=4.9 not available on Python's CI wheel builds
-blosc2-rs      = { version = "0.3.0+2.15.1", optional = true, default-features = false }
+blosc2-rs      = { version = "0.3.1+2.15.1", optional = true, default-features = false }
 zstd           = { version = "^0.13", optional = true }
 xz2            = { version = "0.1.7", optional = true }
 
