--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "libcramjam"
-version     = "0.4.6"
+version     = "0.5.0"
 edition     = "2021"
 license     = "MIT"
 description = "Compression library combining a plethora of algorithms in a similar as possible API"
@@ -48,8 +48,7 @@ libdeflate-sys = { version = "<1.20.0", optional = true }  # TODO: requires gcc>
 blosc2-rs      = { version = "0.3.1+2.15.1", optional = true, default-features = false }
 zstd           = { version = "^0.13", optional = true }
 xz2            = { version = "0.1.7", optional = true }
-# isal-rs        = { path = "../isal-rs", optional = true }
-isal-rs        = { git = "https://github.com/milesgranger/isal-rs.git", branch = "updates", optional = true }
+isal-rs        = { version = "0.2.0+496255c", optional = true }
 
 [build-dependencies]
 cbindgen = "^0.24"
