Add igzip implementation (#12)

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,6 +63,18 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         name: Rust Cache
 
+      - name: Install nasm
+        if: runner.os != 'macOS'
+        uses: ilammy/setup-nasm@v1
+
+      - name: Install build deps (OSX)
+        if: runner.os == 'macOS'
+        run: brew install automake autoconf coreutils libtool nasm
+
+      - name: Set MSVC developer prompt
+        if: runner.os == 'Windows'
+        uses: ilammy/msvc-dev-cmd@v1.6.0
+
       - name: Audit
         if: |
           !matrix.codec && matrix.capi
