--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,11 @@ lz4               = ["dep:lz4"]
 bzip2             = ["dep:bzip2"]
 brotli            = ["dep:brotli"]
 zstd              = ["dep:zstd"]
-igzip             = ["dep:isal-rs"]
+
+igzip             = ["isal-static"]
+isal-static       = ["dep:isal-rs", "isal-rs/static"]
+isal-shared       = ["dep:isal-rs", "isal-rs/shared"]
+use-system-isal   = ["isal-rs/use-system-isal"]
 
 gzip              = ["gzip-static"]
 gzip-static       = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
@@ -48,7 +52,8 @@ libdeflate-sys = { version = "<1.20.0", optional = true }  # TODO: requires gcc>
 blosc2-rs      = { version = "0.3.1+2.15.1", optional = true, default-features = false }
 zstd           = { version = "^0.13", optional = true }
 xz2            = { version = "0.1.7", optional = true }
-isal-rs        = { version = "0.3.0+496255c", optional = true }
+# isal-rs        = { version = "0.3.0+496255c", optional = true }
+isal-rs        = { git = "https://github.com/milesgranger/isal-rs.git", branch = "support-use-system-isal", optional = true, default-features = false }
 
 [build-dependencies]
 cbindgen = "^0.24"
