--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "libcramjam"
-version     = "0.5.2"
+version     = "0.5.3"
 edition     = "2021"
 license     = "MIT"
 description = "Compression library combining a plethora of algorithms in a similar as possible API"
@@ -58,7 +58,7 @@ xz2            = { version = "0.1.7", optional = true }
 
 # ISA-L not supported on 32-bit; Cargo doesn't offer a way to disable a single feature
 [target.'cfg(target_pointer_width = "64")'.dependencies]
-isal-rs        = { version = "0.5.0+496255c", optional = true, default-features = false }
+isal-rs        = { version = "^0.5", optional = true, default-features = false }
 
 [build-dependencies]
 cbindgen = "^0.24"
