--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme      = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default           = ["snappy", "lz4", "bzip2", "brotli", "xz", "zstd", "gzip", "deflate", "blosc2", "igzip"]
+default           = ["snappy", "lz4", "bzip2", "brotli", "xz", "zstd", "gzip", "deflate", "blosc2", "igzip", "ideflate", "izlib"]
 capi              = ["dep:libc"]
 snappy            = ["dep:snap"]
 lz4               = ["dep:lz4"]
@@ -19,6 +19,14 @@ zstd              = ["dep:zstd"]
 igzip             = ["isal-static"]
 igzip-static      = ["isal-static"]
 igzip-shared      = ["isal-shared"]
+
+ideflate          = ["isal-static"]
+ideflate-static   = ["isal-static"]
+ideflate-shared   = ["isal-shared"]
+
+izlib             = ["isal-static"]
+izlib-static      = ["isal-static"]
+izlib-shared      = ["isal-shared"]
 
 isal-static       = ["dep:isal-rs", "isal-rs/static"]
 isal-shared       = ["dep:isal-rs", "isal-rs/shared"]
