--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "libcramjam"
-version     = "0.7.0"
+version     = "0.8.0"
 edition     = "2021"
 license     = "MIT"
 description = "Compression library combining a plethora of algorithms in a similar as possible API"
@@ -33,16 +33,16 @@ isal-shared       = ["dep:isal-rs", "isal-rs/shared"]
 use-system-isal   = ["dep:isal-rs", "isal-rs/use-system-isal"]
 
 gzip              = ["gzip-static"]
-gzip-static       = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
-gzip-shared       = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic"]
+gzip-static       = ["dep:libdeflate-sys", "dep:flate2", "deflate-static"]
+gzip-shared       = ["dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic", "deflate-shared"]
 
 zlib              = ["zlib-static"]
-zlib-static       = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
-zlib-shared       = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic"]
+zlib-static       = ["dep:libdeflate-sys", "dep:flate2", "deflate-static"]
+zlib-shared       = ["dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic", "deflate-shared"]
 
 deflate           = ["deflate-static"]
-deflate-static    = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2"]
-deflate-shared    = ["dep:libdeflater", "dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic"]
+deflate-static    = ["dep:libdeflate-sys", "dep:flate2"]
+deflate-shared    = ["dep:libdeflate-sys", "dep:flate2", "libdeflate-sys/dynamic"]
 
 xz                = ["xz-static"]
 xz-static         = ["dep:xz2", "xz2/static"]  # builds from vendored source of xz
@@ -62,7 +62,6 @@ brotli         = { version = "^7", default-features = false, features = ["std", 
 bzip2          = { version = ">=0.4,<0.6", optional = true }
 lz4            = { version = "^1", optional = true }
 flate2         = { version = "^1", optional = true }
-libdeflater    = { version = "^1", optional = true }
 libdeflate-sys = { version = "<1.20.0", optional = true }  # TODO: requires gcc>=4.9 not available on Python's CI wheel builds
 blosc2-rs      = { version = "0.4.0+2.15.2", optional = true, default-features = false }
 zstd           = { version = "^0.13", optional = true }
